[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://dodge_assets/art/gameover.wav" type="AudioStream" id=5]
[ext_resource path="res://dodge_assets/art/House In a Forest Loop.ogg" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0.0110989, -0.0161014, 0, 0, 0, 0, 480.026, 0.909054, 0, 0, 0, 0, 480.142, 720.799, 0, 0, 0, 0, -0.886536, 722.654, 0, 0, 0, 0, 0.0110989, -0.0161014 )
}

[sub_resource type="GDScript" id=2]
script/source = "extends AudioStreamPlayer

# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[node name="Main" type="Node"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 482.0
margin_bottom = 720.0
color = Color( 0.113725, 0.392157, 0.156863, 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="MobTimer" type="Timer" parent="."]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 0.0110989, -0.0161014 )
rotation = 0.00192734

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
script = SubResource( 2 )

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
